kubernetes/invoice/invoice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice
      version: "v1"
  template:
    metadata:
      labels:
        app: invoice
        version: "v1"
    spec:
      containers:
      - name: invoice-app
        image: deepu105/invoice
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8082
        readinessProbe:
          httpGet:
            path: /invoice/management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /invoice/management/health
            port: http
          initialDelaySeconds: 120
